build_cli_err.txt
warning: unused import: `file_id::FileId`
 --> crates\core\src\vfs.rs:6:5
  |
6 | use file_id::FileId;
  |     ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `deve_core` (lib) generated 1 warning (run `cargo fix --lib -p deve_core` to apply 1 suggestion)
   Compiling deve_cli v0.0.1 (E:\gitclone\Deve-Note\apps\cli)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `chrono`
  --> apps\cli\src\server\ws.rs:43:39
   |
43 | ...                   timestamp: chrono::Utc::now().timestamp_millis(),
   |                                  ^^^^^^ use of unresolved module or unlinked crate `chrono`
   |
   = help: if you wanted to use a crate named `chrono`, use `cargo add chrono` to add it to your `Cargo.toml`

warning: unused variable: `path`
  --> apps\cli\src\main.rs:51:31
   |
51 |         Some(Commands::Init { path }) => {
   |                               ^^^^ help: try ignoring the field: `path: _`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

For more information about this error, try `rustc --explain E0433`.
warning: `deve_cli` (bin "deve_cli") generated 1 warning
error: could not compile `deve_cli` (bin "deve_cli") due to 1 previous error; 1 warning emitted
